[tool.poetry]
name = "mounty"
version = "1.0.0"
description = "A simple Python client for Mountebank"
authors = ["Vasile Pop <vasile.pop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
reorder-python-imports = "^2.7.1"
flake8 = "^4.0.1"
httpretty = "^1.1.4"
bandit = "^1.7.2"
safety = "^1.10.3"
pytest-cov = "^3.0.0"
pytest-timeout = "^2.1.0"
pyupgrade = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"